Remove pipefail bash setting
`grep 'in use: false'` will be empty on a fresh cluster, forcing the
script to error out early with pipeline

--- a/tests/golden/autoscaling/openshift4-nodes/openshift4-nodes/machineconfig_pruning.yaml
+++ b/tests/golden/autoscaling/openshift4-nodes/openshift4-nodes/machineconfig_pruning.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 data:
   machineconfig_pruning.sh: |
     #!/bin/bash
-    set -exo pipefail
+    set -ex
 
     for pool in $(kubectl get machineconfigpool -ojson | jq -r '.items[].metadata.name'); do
       oc adm prune renderedmachineconfigs list --pool-name="$pool" |\
