--- a/tests/golden/remove-machineconfigpool/openshift4-nodes/openshift4-nodes/machineconfig_pruning.yaml
+++ b/tests/golden/remove-machineconfigpool/openshift4-nodes/openshift4-nodes/machineconfig_pruning.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 data:
   machineconfig_pruning.sh: |
     #!/bin/bash
-    set -exo pipefail
+    set -ex
 
     for pool in $(kubectl get machineconfigpool -ojson | jq -r '.items[].metadata.name'); do
       oc adm prune renderedmachineconfigs list --pool-name="$pool" |\
