Patch autoscaler args
Adds some sane defaults:
- `--daemonset-eviction-for-occupied-nodes`: Stops things like CSI drivers to be evicted.
- `--skip-nodes-with-local-storage`: Allows node deletion even if pods use `emptyDir`.

Co-authored-by: Simon Gerber <simon.gerber@vshn.ch>

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -90,6 +90,9 @@ parameters:
 
     autoscaling:
       enabled: false
+      addAutoscalerArgs:
+        - --daemonset-eviction-for-occupied-nodes=false
+        - --skip-nodes-with-local-storage=false
       clusterAutoscaler: {}
       machineAutoscalers: {}
       priorityExpanderConfig: {}
