--- a/tests/autoscaling-scheduled.yml
+++ b/tests/autoscaling-scheduled.yml
@@ -1,9 +1,16 @@
+applications:
+  - espejote
+
 parameters:
   kapitan:
     dependencies:
       - type: https
         source: https://raw.githubusercontent.com/appuio/component-openshift4-monitoring/v6.8.0/lib/openshift4-monitoring-prom.libsonnet
         output_path: vendor/lib/prom.libsonnet
+      - type: https
+        source: https://raw.githubusercontent.com/projectsyn/component-espejote/v0.2.0/lib/espejote.libsonnet
+        output_path: vendor/lib/espejote.libsonnet
+
   openshift4_monitoring:
     namespace: foo
 
