Print a diagnostic message for OCP < 4.17 or if Espejote isn't installed
We add a new parameter `openshiftVersion` which is expected to be set as
`${dynamic_facts:openshiftVersion}`. We use that parameter to determine
whether to even attempt to configure node disruption policies.

Additionally, we also check `inv.applications` for `espejote` and print
a diagnostic message if we're on OCP < 4.17 or if Espejote isn't
installed.

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -2,6 +2,9 @@ parameters:
   openshift4_nodes:
     =_metadata:
       multi_tenant: true
+    openshiftVersion:
+      Major: '4'
+      Minor: '16'
     machineApiNamespace: openshift-machine-api
     projectName: none
     infrastructureID: none
