Switch to Espejote `watchContextResource`
This ensures that we don't have a duplicate cache for `machineconfigs`.

--- a/tests/golden/node-disruption-policies/openshift4-nodes/openshift4-nodes/nodedisruptionpolicies_managedresource.yaml
+++ b/tests/golden/node-disruption-policies/openshift4-nodes/openshift4-nodes/nodedisruptionpolicies_managedresource.yaml
@@ -178,13 +178,8 @@ spec:
     [ res ]
   triggers:
     - name: machineconfig
-      watchResource:
-        apiVersion: machineconfiguration.openshift.io/v1
-        kind: MachineConfig
-        labelSelector:
-          matchExpressions:
-            - key: machineconfiguration.openshift.io/role
-              operator: Exists
+      watchContextResource:
+        name: machineconfigs
     - name: machineconfiguration/cluster
       watchResource:
         apiVersion: operator.openshift.io/v1
