Fix rendered static node disruption policies JSON

--- a/tests/golden/node-disruption-policies/openshift4-nodes/openshift4-nodes/nodedisruptionpolicies_managedresource.yaml
+++ b/tests/golden/node-disruption-policies/openshift4-nodes/openshift4-nodes/nodedisruptionpolicies_managedresource.yaml
@@ -10,7 +10,25 @@ spec:
     config.json: |-
       {
           "files": [
-
+              {
+                  "actions": [
+                      {
+                          "restart": {
+                              "serviceName": "chronyd.service"
+                          },
+                          "type": "Restart"
+                      }
+                  ],
+                  "path": "/etc/chrony.conf"
+              },
+              {
+                  "actions": [
+                      {
+                          "type": "None"
+                      }
+                  ],
+                  "path": "/usr/local/bin"
+              }
           ],
           "sshkey_actions": [
 
