Allow defaulting annotations for LB services
Used to inject `service.beta.kubernetes.io/exoscale-loadbalancer-service-instancepool-id` on Exoscale

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -91,6 +91,8 @@ parameters:
 
     machineSets: {}
 
+    serviceLoadBalancerDefaultAnnotations: {}
+
     autoscaling:
       enabled: false
       addAutoscalerArgs:
