--- a/tests/lb-default-annotation.yml
+++ b/tests/lb-default-annotation.yml
@@ -1,3 +1,13 @@
-# Overwrite parameters here
+applications:
+  - espejote
 
-# parameters: {...}
+parameters:
+  kapitan:
+    dependencies:
+      - type: https
+        source: https://raw.githubusercontent.com/projectsyn/component-espejote/v0.2.0/lib/espejote.libsonnet
+        output_path: vendor/lib/espejote.libsonnet
+
+  openshift4_nodes:
+    serviceLoadBalancerDefaultAnnotations:
+      service.beta.kubernetes.io/exoscale-loadbalancer-service-instancepool-id: 7026DCCB-39B4-451B-AB38-EB527CC836A4
