--- a/tests/golden/cloudscale/openshift4-nodes/openshift4-nodes/machineset-infra.yaml
+++ b/tests/golden/cloudscale/openshift4-nodes/openshift4-nodes/machineset-infra.yaml
@@ -23,6 +23,7 @@ spec:
     spec:
       metadata:
         labels:
+          foo: bar
           node-role.kubernetes.io/infra: ''
           node-role.kubernetes.io/worker: ''
           syn.tools/cluster-id: c-green-test-1234
