Fix capacity alerts get duplicated by Espejote
The capacity alerts are deployed to namespace openshift-monitoring,
which leads the ManagedResource in that namespace to duplicate the alerts.
This PR labels the deployed PrometheusRule with `espejote.io/ignore`.

--- a/tests/golden/autoscaling/openshift4-nodes/openshift4-nodes/capacity_alerting_rules.yaml
+++ b/tests/golden/autoscaling/openshift4-nodes/openshift4-nodes/capacity_alerting_rules.yaml
@@ -4,6 +4,7 @@ metadata:
   annotations:
     syn_component: openshift4-nodes
   labels:
+    espejote.io/ignore: ''
     name: openshift4-nodes-capacity
   name: openshift4-nodes-capacity
   namespace: foo
