Make OpenStack network portSecurity configurable through `nodeGroups`
The value provided through `nodeGroups.<group>.portSecurity` is applied
to all entries of `providerSpec.value.networks` which were configured
through `defaultSpecs`.

For networks which are defined directly through `nodeGroup.<group>.spec`
users must set an appropriate value for ``networks[].portSecurity`
themselves.

--- a/tests/golden/openstack/openshift4-nodes/openshift4-nodes/machineset-worker.yaml
+++ b/tests/golden/openstack/openshift4-nodes/openshift4-nodes/machineset-worker.yaml
@@ -33,6 +33,7 @@ spec:
             namespace: openshift-machine-api
           networks:
             - filter: {}
+              portSecurity: false
               subnets:
                 - filter:
                     tags: openshiftClusterID=c-green-test-1234-ohgh7
