--- a/tests/golden/autoscaling-scheduled/openshift4-nodes/openshift4-nodes/downscale_cronjobs.yaml
+++ b/tests/golden/autoscaling-scheduled/openshift4-nodes/openshift4-nodes/downscale_cronjobs.yaml
@@ -65,18 +65,19 @@ spec:
                 - -p
                 - '{"spec":{"scaleDown":{"enabled": true}}}'
               env:
-                HOME: /home/downscaler
+                - name: HOME
+                  value: /home/downscaler
               image: quay.io/appuio/oc:v4.16
               imagePullPolicy: IfNotPresent
               name: autoscale-enabler
               volumeMounts:
-                home:
-                  mountPath: /home/downscaler
+                - mountPath: /home/downscaler
+                  name: home
           restartPolicy: Never
           serviceAccountName: scheduled-downscaler
           volumes:
-            home:
-              emptyDir: {}
+            - emptyDir: {}
+              name: home
   schedule: 0 22 * * 2
   successfulJobsHistoryLimit: 10
   timeZone: Europe/Zurich
@@ -107,18 +108,19 @@ spec:
                 - -p
                 - '{"spec":{"scaleDown":{"enabled": false}}}'
               env:
-                HOME: /home/downscaler
+                - name: HOME
+                  value: /home/downscaler
               image: quay.io/appuio/oc:v4.16
               imagePullPolicy: IfNotPresent
               name: autoscale-disabler
               volumeMounts:
-                home:
-                  mountPath: /home/downscaler
+                - mountPath: /home/downscaler
+                  name: home
           restartPolicy: Never
           serviceAccountName: scheduled-downscaler
           volumes:
-            home:
-              emptyDir: {}
+            - emptyDir: {}
+              name: home
   schedule: 0 1 * * 3
   successfulJobsHistoryLimit: 10
   timeZone: Europe/Zurich
